--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,6 +64,37 @@ li a {
 li a::first-letter {
     text-transform: capitalize;
 }
+
+main {
+    width: 100%;
+    height: auto;
+}
+
+.purple--container {
+    padding: 0px 15px;
+}
+
+.purple--wrapper {
+    background-color: var(--purple);
+    padding: 15px;
+    width: 100%;
+}
+
+.purple--wrapper h1 {
+    color: var(--orange);
+    text-transform: uppercase;
+}
+
+.purple--wrapper p {
+    padding-top: 5px;
+    padding-bottom: 15px;
+    color: var(--white);
+}
+
+.purple--wrapper picture img {
+    width: 90%;
+    padding-bottom: 10px;
+}
 /* li:hover {
     background-color: var(--light-orange);
     color: var(--gray);
