--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,11 @@ main {
     height: auto;
 }
 
+p {
+    font-size: 15px;
+    line-height: 25px;
+}
+
 .purple--container {
     padding: 0px 15px;
 }
@@ -80,7 +85,7 @@ main {
     width: 100%;
 }
 
-.purple--wrapper h1 {
+.purple--wrapper h1 span {
     color: var(--orange);
     text-transform: uppercase;
 }
@@ -94,6 +99,36 @@ main {
 .purple--wrapper picture img {
     width: 90%;
     padding-bottom: 10px;
+}
+
+.purple--wrapper article h2 {
+    color: var(--orange);
+    padding-top: 10px;
+    text-transform: uppercase;
+}
+
+iframe {
+    height: 28.5vh;
+    width: 100%;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer--wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.footer--wrapper small, .footer--wrapper small a {
+    color: var(--white);
+    line-height: 30px;
 }
 /* li:hover {
     background-color: var(--light-orange);
